--- a/server/webapp/mall/index.html
+++ b/server/webapp/mall/index.html
@@ -1,20 +1,112 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><title></title><script>(function (doc, win, i) {
-            var docEl = doc.documentElement,
-                resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
-                recalc = function () {
-                    var clientWidth = docEl.clientWidth;
-                    if (!clientWidth) return;
-                    if (clientWidth >= i) {
-                        docEl.style.fontSize = '100px';
-                    } else {
-                        docEl.style.fontSize = 100 * (clientWidth / i) + 'px';
-                    }
-                };
-            if (!doc.addEventListener) return;
-            win.addEventListener(resizeEvt, recalc, false);
-            doc.addEventListener('DOMContentLoaded', recalc, false);
-        })(document, window, 750);
-        // 750是设计稿的宽度。设计稿上div宽度为750，则width为7.5rem，直接除以100即可。
-        // 替换css中原来的px值，则先乘以2，再除以100</script><style>html, body {
-            -webkit-overflow-scrolling: touch;
-        }</style><link href=./static/css/app.b512fbe8119ecfc869ff1e1fbf0621c9.css rel=stylesheet></head><body><div id=app></div><script>!function(e){function n(r){if(t[r])return t[r].exports;var a=t[r]={i:r,l:!1,exports:{}};return e[r].call(a.exports,a,a.exports,n),a.l=!0,a.exports}var r=window.webpackJsonp;window.webpackJsonp=function(t,c,f){for(var o,i,u,d=0,b=[];d<t.length;d++)i=t[d],a[i]&&b.push(a[i][0]),a[i]=0;for(o in c)Object.prototype.hasOwnProperty.call(c,o)&&(e[o]=c[o]);for(r&&r(t,c,f);b.length;)b.shift()();if(f)for(d=0;d<f.length;d++)u=n(n.s=f[d]);return u};var t={},a={22:0};n.e=function(e){function r(){o.onerror=o.onload=null,clearTimeout(i);var n=a[e];0!==n&&(n&&n[1](new Error("Loading chunk "+e+" failed.")),a[e]=void 0)}var t=a[e];if(0===t)return new Promise(function(e){e()});if(t)return t[2];var c=new Promise(function(n,r){t=a[e]=[n,r]});t[2]=c;var f=document.getElementsByTagName("head")[0],o=document.createElement("script");o.type="text/javascript",o.charset="utf-8",o.async=!0,o.timeout=12e4,n.nc&&o.setAttribute("nonce",n.nc),o.src=n.p+"static/js/"+e+"."+{0:"ab6ea28883aaaf9b2986",1:"043e583c8a3811f84e39",2:"875f1e8f3d06f8917916",3:"107a409f0024b7f0d486",4:"31168f25e55dcb7a73a1",5:"43bac4dbb67aa7f2521f",6:"29452bae70ce09f4b646",7:"d41a132abc7ff9f30c62",8:"aefd81475d81daa824c2",9:"3ecea0a035064a68b5da",10:"fed07261fedf392bfec9",11:"bf5929b86d45467f53bf",12:"de18fc92871248af7137",13:"e4a45cc8f9ce6f53a12a",14:"2f89414d4090e2603804",15:"1f03e12c28fe17fee6e8",16:"0d60f08c0580370800a5",17:"0e55f089a0fb4c503d9f",18:"01330393bc0aa0d35f1a",19:"7910b077c79bc5d7ac29",20:"8408175b3550402c9326",21:"b95332cc3290e2bcc06d"}[e]+".js";var i=setTimeout(r,12e4);return o.onerror=o.onload=r,f.appendChild(o),c},n.m=e,n.c=t,n.i=function(e){return e},n.d=function(e,r,t){n.o(e,r)||Object.defineProperty(e,r,{configurable:!1,enumerable:!0,get:t})},n.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return n.d(r,"a",r),r},n.o=function(e,n){return Object.prototype.hasOwnProperty.call(e,n)},n.p="./",n.oe=function(e){throw console.error(e),e}}([]);</script><script type=text/javascript src=./static/js/vendor.7910b077c79bc5d7ac29.js></script><script type=text/javascript src=./static/js/app.8408175b3550402c9326.js></script><script type=text/javascript src=./static/js/polyfill.b95332cc3290e2bcc06d.js></script></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset=utf-8>
+	<meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
+	<title></title>
+	<script>(function (doc, win, i) {
+		var docEl = doc.documentElement,
+			resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+			recalc = function () {
+				var clientWidth = docEl.clientWidth;
+				if (!clientWidth) return;
+				if (clientWidth >= i) {
+					docEl.style.fontSize = '100px';
+				} else {
+					docEl.style.fontSize = 100 * (clientWidth / i) + 'px';
+				}
+			};
+		if (!doc.addEventListener) return;
+		win.addEventListener(resizeEvt, recalc, false);
+		doc.addEventListener('DOMContentLoaded', recalc, false);
+	})(document, window, 750);
+	// 750是设计稿的宽度。设计稿上div宽度为750，则width为7.5rem，直接除以100即可。
+	// 替换css中原来的px值，则先乘以2，再除以100</script>
+	<style>html, body {
+		-webkit-overflow-scrolling: touch;
+	}</style>
+	<link href=./static/css/app.b512fbe8119ecfc869ff1e1fbf0621c9.css rel=stylesheet>
+</head>
+<body>
+<div id=app></div>
+<script>!function (e) {
+	function n(r) {
+		if (t[r]) return t[r].exports;
+		var a = t[r] = {i: r, l: !1, exports: {}};
+		return e[r].call(a.exports, a, a.exports, n), a.l = !0, a.exports
+	}
+
+	var r = window.webpackJsonp;
+	window.webpackJsonp = function (t, c, f) {
+		for (var o, i, u, d = 0, b = []; d < t.length; d++) i = t[d], a[i] && b.push(a[i][0]), a[i] = 0;
+		for (o in c) Object.prototype.hasOwnProperty.call(c, o) && (e[o] = c[o]);
+		for (r && r(t, c, f); b.length;) b.shift()();
+		if (f) for (d = 0; d < f.length; d++) u = n(n.s = f[d]);
+		return u
+	};
+	var t = {}, a = {22: 0};
+	n.e = function (e) {
+		function r() {
+			o.onerror = o.onload = null, clearTimeout(i);
+			var n = a[e];
+			0 !== n && (n && n[1](new Error("Loading chunk " + e + " failed.")), a[e] = void 0)
+		}
+
+		var t = a[e];
+		if (0 === t) return new Promise(function (e) {
+			e()
+		});
+		if (t) return t[2];
+		var c = new Promise(function (n, r) {
+			t = a[e] = [n, r]
+		});
+		t[2] = c;
+		var f = document.getElementsByTagName("head")[0], o = document.createElement("script");
+		o.type = "text/javascript", o.charset = "utf-8", o.async = !0, o.timeout = 12e4, n.nc && o.setAttribute("nonce", n.nc), o.src = n.p + "static/js/" + e + "." + {
+			0: "ab6ea28883aaaf9b2986",
+			1: "043e583c8a3811f84e39",
+			2: "875f1e8f3d06f8917916",
+			3: "107a409f0024b7f0d486",
+			4: "31168f25e55dcb7a73a1",
+			5: "43bac4dbb67aa7f2521f",
+			6: "29452bae70ce09f4b646",
+			7: "d41a132abc7ff9f30c62",
+			8: "aefd81475d81daa824c2",
+			9: "3ecea0a035064a68b5da",
+			10: "fed07261fedf392bfec9",
+			11: "bf5929b86d45467f53bf",
+			12: "de18fc92871248af7137",
+			13: "e4a45cc8f9ce6f53a12a",
+			14: "2f89414d4090e2603804",
+			15: "1f03e12c28fe17fee6e8",
+			16: "0d60f08c0580370800a5",
+			17: "0e55f089a0fb4c503d9f",
+			18: "01330393bc0aa0d35f1a",
+			19: "7910b077c79bc5d7ac29",
+			20: "8408175b3550402c9326",
+			21: "b95332cc3290e2bcc06d"
+		}[e] + ".js";
+		var i = setTimeout(r, 12e4);
+		return o.onerror = o.onload = r, f.appendChild(o), c
+	}, n.m = e, n.c = t, n.i = function (e) {
+		return e
+	}, n.d = function (e, r, t) {
+		n.o(e, r) || Object.defineProperty(e, r, {configurable: !1, enumerable: !0, get: t})
+	}, n.n = function (e) {
+		var r = e && e.__esModule ? function () {
+			return e.default
+		} : function () {
+			return e
+		};
+		return n.d(r, "a", r), r
+	}, n.o = function (e, n) {
+		return Object.prototype.hasOwnProperty.call(e, n)
+	}, n.p = "./", n.oe = function (e) {
+		throw console.error(e), e
+	}
+}([]);</script>
+<script type=text/javascript src=./static/js/vendor.7910b077c79bc5d7ac29.js></script>
+<script type=text/javascript src=./static/js/app.8408175b3550402c9326.js></script>
+<script type=text/javascript src=./static/js/polyfill.b95332cc3290e2bcc06d.js></script>
+</body>
+</html>
